<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tms_if_for_opera</name>
  <version>0.0.1</version>
  <description>The package to use OPERA as tms_rc.</description>
  <maintainer email="shibata@irvs.ait.kyushu-u.ac.jp">common</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tms_msg_ts</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <depend>moveit_common</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>Boost</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
